; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_mime.c_dot.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_mime.c_dot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i64, i32*)* @dot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dot(i32 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = trunc i32 %9 to i8
  %11 = call i32 @luaL_addchar(i32* %8, i8 signext %10)
  %12 = load i32, i32* %5, align 4
  switch i32 %12, label %27 [
    i32 13, label %13
    i32 10, label %14
    i32 46, label %20
  ]

13:                                               ; preds = %3
  store i64 1, i64* %4, align 8
  br label %28

14:                                               ; preds = %3
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %15, 1
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 2, i32 0
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %4, align 8
  br label %28

20:                                               ; preds = %3
  %21 = load i64, i64* %6, align 8
  %22 = icmp eq i64 %21, 2
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @luaL_addchar(i32* %24, i8 signext 46)
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %3, %26
  store i64 0, i64* %4, align 8
  br label %28

28:                                               ; preds = %27, %14, %13
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i32 @luaL_addchar(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
